<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.studentHub.Admin.MainActivity"
    android:padding="30dp"
    android:background="@color/white"
    android:transitionName="transition_login">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/psbacademy"/>

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome Back"
                android:layout_marginTop="20dp"
                android:textAllCaps="true"
                android:textSize="25sp"
                android:fontFamily="@font/muli_black"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in to Continue"
                android:layout_marginTop="15sp"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:fontFamily="@font/muli_black"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="Enter Username"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/username_email_icon"
                    app:startIconTint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_Login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_black"
                        android:textColor="@color/black"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="Enter Password"
                    app:hintTextColor="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/password_icon"
                    app:startIconTint="@color/black"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_Password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/muli_black"
                        android:textColor="@color/black"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                        android:text="Remember me"
                        android:textColor="@color/black"
                        android:layout_centerVertical="true"/>

                    <Button
                        android:id="@+id/forgetPassword"
                        android:onClick="forgetPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Forget Password"
                        android:background="#00000000"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"/>

                </RelativeLayout>

                <Button
                    android:id="@+id/button_Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login"
                    android:background="@color/black"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/button_Register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Register Account"
                    android:layout_marginTop="10dp"
                    android:background="#00000000"
                    android:layout_gravity="center"/>

                <Button
                    android:id="@+id/button_RegistrationGoogle"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/newgooglesignin"/>


            </LinearLayout>

<!--            <EditText-->

<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:background="@drawable/edit_design"-->
<!--                android:hint="Email: "-->
<!--                android:padding="15dp"-->
<!--                android:textColorHint="@android:color/white" />-->

<!--            <EditText-->
<!--                -->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="15dp"-->
<!--                android:background="@drawable/edit_design"-->
<!--                android:hint="Password: "-->
<!--                android:padding="15dp"-->
<!--                android:textColorHint="@android:color/white" />-->

<!--            <Button-->
<!--                -->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:text="Login"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--            <Button-->
<!--                -->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:text="Register"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--            <Button-->
<!--                android:id="@+id/button_allJob_activityMain"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:text="View Notice"-->
<!--                android:background="@color/black"-->
<!--                android:textColor="@color/white"-->
<!--                android:layout_marginTop="10dp" />-->

        </LinearLayout>
</ScrollView>

